<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/DefaultBackgroundColor">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="55dp"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp" >

        <TableRow
            android:id="@+id/tblrow_metrovalencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp" >

                <ImageView
                    android:id="@+id/imgv_logo_metro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo_metro" />

                <TextView
                    android:id="@+id/lbl_servicio_metro_valencia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@id/imgv_logo_metro"
                    android:text="@string/lbl_metrovalencia"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bt_service_metro_valencia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/lbl_servicio_metro_valencia"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/lbl_servicio_metro_valencia"
                    android:layout_marginTop="15dp"
                    android:text="@string/lbl_check" />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tblrow_emtvalencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp" >

                <ImageView
                    android:id="@+id/imgv_logo_emt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo_emt" />

                <TextView
                    android:id="@+id/lbl_servicio_emt_valencia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@id/imgv_logo_emt"
                    android:text="@string/lbl_emtvalencia"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bt_service_emt_valencia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/lbl_servicio_emt_valencia"
                    android:layout_alignRight="@+id/lbl_servicio_emt_valencia"
                    android:layout_below="@id/lbl_servicio_emt_valencia"
                    android:layout_marginTop="15dp"
                    android:text="@string/lbl_check" />
            </RelativeLayout>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="13dp"
        android:text="@string/lbl_card"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_cardid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
		android:layout_marginRight="10dp"
        android:gravity="right"
		android:textIsSelectable="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="italic" />

</RelativeLayout>